unpackaged/main/default/objects/Brand_Form_CMDT_Update__e/Brand_Form_CMDT_Update__e.object-meta.xml
<CustomObject>
    <description>Used to avoid mixed DML errors when updating custom metadata records from flow</description>
    <label>Brand Form CMDT Update</label>
    <pluralLabel>Brand Form CMDT Updates</pluralLabel>
</CustomObject>