unpackaged/main/default/objects/Brand_Form_CMDT_Update__e/fields/BypassToggle__c.field-meta.xml
<CustomField>
    <fullName>BypassToggle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassToggle</label>
    <type>Checkbox</type>
</CustomField>