unpackaged/main/default/objects/Brand_Form_CMDT_Update__e/fields/MessagetoUpdate__c.field-meta.xml
<CustomField>
    <fullName>MessagetoUpdate__c</fullName>
    <label>Message to Update</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>