unpackaged/main/default/objects/Brand_Form_CMDT_Update__e/fields/RecordtoupdateId__c.field-meta.xml
<CustomField>
    <fullName>RecordtoupdateId__c</fullName>
    <description>Holds the Id of the record that will be updated by the platform event triggered flow</description>
    <label>Record to update Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>